--- a/assets/assets/config.json
+++ b/assets/assets/config.json
@@ -1,6 +1,34 @@
 {
   "baseApiUrl": "https://rms-dev-dpd.deusrobotics.com/",
-  "cagesId": ["102", "34", "102"],
-  "targets": ["UNLOADING_U21", "UNLOADING_U22"],
+  "cagesId": [
+    "1",
+    "2",
+    "3",
+    "4",
+    "5",
+    "6",
+    "7",
+    "8",
+    "9",
+    "10",
+    "11",
+    "12"
+  ],
+  "targets": [
+    "1",
+    "2",
+    "101",
+    "102",
+    "103",
+    "104",
+    "105",
+    "106",
+    "11",
+    "12",
+    "13",
+    "21",
+    "22",
+    "23"
+  ],
   "destinationGroupId": "loading"
 }
