--- a/assets/assets/config.json
+++ b/assets/assets/config.json
@@ -14,21 +14,5 @@
     "211",
     "212"
   ],
-  "targets": [
-    "1",
-    "2",
-    "101",
-    "102",
-    "103",
-    "104",
-    "105",
-    "106",
-    "11",
-    "12",
-    "13",
-    "21",
-    "22",
-    "23"
-  ],
-  "destinationGroupId": "loading"
+  "accountUserId": "65ca05f5010bf0ff1c884273"
 }
