--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "Deus App",
-    "short_name": "Deus App",
+    "name": "mobile_scanner_example",
+    "short_name": "mobile_scanner_example",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Demonstrates how to use the mobile_scanner plugin.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
